[package]
name = "default-conversion"
version = "0.1.0"
authors = ["Aurelien Foucault <aurelien.foucault@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.44", features = ["full", "extra-traits", "visit-mut", "parsing"] }
quote = "1.0.7"
darling = "0.10"
