[package]
name = "default-conversion"
version = "0.1.0"
authors = ["Aurelien Foucault <aurelien.foucault@epitech.eu>"]
edition = "2018"
description = "A derive macro to automatic implement conversions between similar structs"
publish = true
license = "MIT/Apache-2.0"
documentation = "https://github.com/AurelienFT/default-conversion-rs"
homepage = "https://github.com/AurelienFT/default-conversion-rs"
repository = "https://github.com/AurelienFT/default-conversion-rs"
keywords = ["macro", "conversion", "proc_macro"]
categories = ["rust-patterns", "data-structures"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.44", features = ["full", "extra-traits", "visit-mut", "parsing"] }
quote = "1.0.7"
darling = "0.10"
